--- a/src/templates/base_console.html
+++ b/src/templates/base_console.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> {% endcomment %}
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css" />
 
@@ -23,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex align-items-center justify-content-center">
         <div class="d-flex">
-            <a class="navbar-brand" href="{% url 'storage:main_table' %}">Storage Console</a>
+            <a class="navbar-brand" href="{% url 'storage:main_table' %}">Biblionef Storage Console</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -42,18 +44,21 @@
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Go!</button>
                     </form>
                 <div>
-               
+            
         </div>
     </nav>
     
 
-    <div class="container mx-auto mt-4 min-h-screen">
+    <div class="container mx-auto m-1">
         
-        <div class=".mt-5 .pt-4">
+        <div class=".m-1 .p-2">
             {% if messages %}
                 {% for message in messages %}
-                <div class="p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400" role="alert">
-                    {{ message }}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    {{message}}
+                    <button type="button" class="close" data-bs-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 {% endfor %}
             {% endif %}
@@ -63,6 +68,10 @@
             {% block content %}
             {% endblock content %}
         </div>
+
+        <script>
+            $(".alert").alert('close')
+        </script>
 
     
     {% comment %} {% include 'base/js.html' %} {% endcomment %}
