--- a/src/templates/base_console.html
+++ b/src/templates/base_console.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="/">Back to main app</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'storage:check' %}">Chek the amounts</a>
+                        <a class="nav-link" href="{% url 'storage:check' %}">Check the amounts</a>
                     </li>
                 </ul>
                 <div class="d-flex">
