bases are combined

--- a/src/templates/base/navbar.html
+++ b/src/templates/base/navbar.html
@@ -1,7 +1,58 @@
 
 {% load cart_template_tags %}
 
-<nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Biblionef storage</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor04" aria-controls="navbarColor04" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor04">
+      <ul class="navbar-nav me-auto ">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'storage:list' %}">Book shelf</a>
+        </li>
+        {% if user.is_superuser %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'storage:main_table' %}">Console</a>
+        </li>
+        {% endif %}
+
+        {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'storage:order-summary' %}">
+            <span class="red z-depth-1 mr-1"> {{ request.user|cart_item_count }} in </span>
+            <i class="fas fa-shopping-cart"></i>
+            <span class="clearfix d-none d-sm-inline-block"> Cart </span>
+          </a>
+        </li>
+        <li class="nav-item dropdown show">
+          <a class="nav-link dropdown-toggle " data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">{{ request.user }}</a>
+          <div class="dropdown-menu ">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+          </div>
+        </li>
+
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">Login</a>
+        </li>
+
+        {% endif %}
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-sm-2" type="search" placeholder="Search">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
+{% comment %} <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded">
     <div class="container flex flex-wrap items-center justify-between mx-auto">
       <a href="/" class="flex items-center">
           <span class="self-center text-xl font-semibold whitespace-nowrap">BOOKSTAND</span>
@@ -50,4 +101,4 @@
       </div>
     </div>
   </nav>
-  
+   {% endcomment %}
