--- a/src/templates/base_console.html
+++ b/src/templates/base_console.html
@@ -9,6 +9,7 @@
 
     {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> {% endcomment %}
 
+    <link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css" />
 
@@ -63,11 +64,9 @@
                 {% endfor %}
             {% endif %}
         </div>
-        
-
-            {% block content %}
-            {% endblock content %}
-        </div>
+    </div>
+        {% block content %}
+        {% endblock content %}
 
         <script>
             $(".alert").alert('close')
