--- a/src/templates/storage/main_table.html
+++ b/src/templates/storage/main_table.html
@@ -1,4 +1,4 @@
-{% extends "base_console.html" %}
+{% extends "base.html" %}
 
 
 
@@ -11,11 +11,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
 <script src="https://cdn.datatables.net/v/bs5/jq-3.6.0/jszip-2.5.0/dt-1.13.4/b-2.3.6/b-colvis-2.3.6/b-html5-2.3.6/b-print-2.3.6/datatables.min.js"></script>
 
-<div class="mw-100" id="store_book_wrapper">
+<div class="w-auto" id="store_book_wrapper">
         <table class="table col-4 table-sm table-hover p-3 cell-border compact stripe" id="store_book">
             <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                 <tr>
-                    <th style="width: 10%">Title ID</th>
+                    <th class="w-10">Title ID</th>
                     <th >ISBN</th>
                     <th >Title</th>
                     <th >Author</th>
