--- a/src/templates/base/navbar.html
+++ b/src/templates/base/navbar.html
@@ -1,5 +1,6 @@
 
 {% load cart_template_tags %}
+{% load django_bootstrap5 %}
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
@@ -27,7 +28,7 @@
           </a>
         </li>
         <li class="nav-item dropdown show">
-          <a class="nav-link dropdown-toggle " data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">{{ request.user }}</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="collapse" href="#" role="button" aria-haspopup="true" aria-expanded="true">{{ request.user }}</a>
           <div class="dropdown-menu ">
             <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Another action</a>
